@@ -1,5 +1,9 @@
 Changes to version 1.3.3
 ------------------------
+
+- IEC 61850 server: reporting - fixed problem with removing old GI reports when latest report is also GI
+- IEC 61850 client: fixed problems in ClientReportControlBlock_create (see github #134)
+- IEC 61850 client: handle reason code correctly when report contains data with different reason code (see github #133)
 - IEC 61850 server: optimized report buffer handling for buffered reporting (save memory and encoding time)
 - IEC 61850 client: fixed problem - IedConnection cannot be reused after IedConnection_close (github #124)
 - IEC 61850 server: added support for pre configured client with ClientLN
@@ -11,6 +15,7 @@ Changes to version 1.3.3
 - fixed bug in windows socket abstraction
 - fixed client TCP keep alive problem (see github #115)
 - MMS server: read service - return data access error for component access to simple variable
+- GOOSE receiver: fixed potential deadlock when GooseReceiver_stop is called directly after GooseReceiver_start
 
 Changes to version 1.3.2
 ------------------------
